--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "josiasmontag/laravel-recaptchav3": "^0.6.0",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0"
     },
